--- a/core/src/main/resources/templates/core/management_places.html
+++ b/core/src/main/resources/templates/core/management_places.html
@@ -198,28 +198,28 @@
                                     <div class="form-group col-md-4 work-hours">
                                         <div class="form-row">
                                             <div class="form-group col-6">
-                                                <label for="startTime">start time</label>
-                                                <input type="time" class="form-control-sm" id="startTime">
+                                                <label>start time</label>
+                                                <input type="time" class="form-control-sm" name="openTime">
                                             </div>
                                             <div class="form-group col-6">
-                                                <label for="endTime">end time</label>
-                                                <input type="time" class="form-control-sm" id="endTime">
+                                                <label>end time</label>
+                                                <input type="time" class="form-control-sm" name="closeTime">
                                             </div>
                                         </div>
                                     </div>
                                     <div class="form-group col-md-5 break-time">
-                                        <button class="btn btn-success btn-sm add-break" id="brh">Add break hours
+                                        <button class="btn btn-success btn-sm add-break">Add break hours
                                         </button>
                                         <div class="form-row break-hours displayNone">
                                             <div class="form-group">
                                                 <div class="form-row">
                                                     <div class="form-group col-5">
-                                                        <label for="startBreak">start break</label>
-                                                        <input type="time" class="form-control-sm" id="startBreak">
+                                                        <label>start break</label>
+                                                        <input type="time" class="form-control-sm" name="startTime">
                                                     </div>
                                                     <div class="form-group col-5">
-                                                        <label for="endBreak">end break</label>
-                                                        <input type="time" class="form-control-sm" id="endBreak">
+                                                        <label>end break</label>
+                                                        <input type="time" class="form-control-sm" name="endTime">
                                                     </div>
                                                     <div class="=col-2">
                                                         <i class="material-icons removeBreak" data-toggle="tooltip"
