--- a/core/src/main/resources/static/management/css/table_Modal_Pagination.css
+++ b/core/src/main/resources/static/management/css/table_Modal_Pagination.css
@@ -280,3 +280,28 @@ table.table .avatar {
     top: 8px;
     left: 10px;
 }
+input[type=search] {
+    border: 1px dotted #999;
+    border-radius: 0;
+    width : 110px;
+    margin: 0;
+    box-sizing: border-box;
+    -webkit-appearance: none;
+}
+
+/*!* Style the submit button *!*/
+/*#searchByDates {*/
+/*    float: left;*/
+/*    width: 20%;*/
+/*    padding: 10px;*/
+/*    background: #2196F3;*/
+/*    color: white;*/
+/*    font-size: 17px;*/
+/*    border: 1px solid grey;*/
+/*    border-left: none; !* Prevent double borders *!*/
+/*    cursor: pointer;*/
+/*}*/
+
+/*#searchByDates {*/
+/*    background: #0b7dda;*/
+/*}*/
