docs added, some refactoring

--- a/core/src/main/resources/templates/core/management_user_rating.html
+++ b/core/src/main/resources/templates/core/management_user_rating.html
@@ -69,37 +69,37 @@
                         </td>
                         <td>
                             <form method="POST" action="/management/rating">
-                                <input type="search" th:name="event_name" placeholder="Search"/>
+                                <input type="search" th:name="eventName" placeholder="Search"/>
                             </form>
                         </td>
                         <td>
                             <form method="POST" action="/management/rating">
-                                <input type="search" th:name="user_id" placeholder="Search"/>
+                                <input type="search" th:name="userId" placeholder="Search"/>
                             </form>
                         </td>
                         <td>
                             <form method="POST" action="/management/rating">
-                                <input type="search" th:name="user_email" placeholder="Search"/>
+                                <input type="search" th:name="userEmail" placeholder="Search"/>
                             </form>
                         </td>
                         <td>
                             <form method="POST" action="/management/rating" name="dateRangeForm">
                                 <div class="input-group input-daterange">
-                                    <input type="search" name="start_date" class="form-control"/>
+                                    <input type="search" name="startDate" class="form-control"/>
                                     <div class="input-group-addon">to</div>
-                                    <input type="search" name="end_date" class="form-control"/>
+                                    <input type="search" name="endDate" class="form-control"/>
                                     <button type="submit" id="searchByDates"><i class="fa fa-search"></i></button>
                                 </div>
                             </form>
                         </td>
                         <td>
                             <form method="POST" action="/management/rating">
-                                <input type="search" th:name="points_changed" placeholder="Search"/>
+                                <input type="search" th:name="pointsChanged" placeholder="Search"/>
                             </form>
                         </td>
                         <td>
                             <form method="POST" action="/management/rating">
-                                <input type="search" th:name="current_rating" placeholder="Search"/>
+                                <input type="search" th:name="currentRating" placeholder="Search"/>
                             </form>
                         </td>
                     </tr>
